errores reparados para intelling